Change to proprietary license - All Rights Reserved

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Debt Snowball Calculator | Pay Off Debt Fast | Dave Ramsey Method</title>
-    <meta name="description" content="Free debt snowball calculator using Dave Ramsey's proven method. See exactly when you'll be debt-free. Compare snowball vs avalanche. Track your progress. No signup required.">
+    <title>Debt Snowball Calculator | Pay Off Debt Fast | Dave Ramsey Method</title>
+    <meta name="description" content="Premium debt snowball calculator using Dave Ramsey's proven method. See exactly when you'll be debt-free. Compare snowball vs avalanche. Track your progress. Private & secure.">
     <meta name="keywords" content="debt snowball calculator, Dave Ramsey, debt payoff, snowball method, avalanche method, debt-free, financial peace">
     <style>
         * {
@@ -329,9 +329,9 @@
         <h1>See Exactly When You'll Be Debt-Free</h1>
         <p class="hero-subtitle">The free debt snowball calculator using Dave Ramsey's proven method. No signup. No spam. Just results.</p>
         <div class="hero-badges">
-            <div class="hero-badge">✅ 100% Free</div>
-            <div class="hero-badge">🔒 Private</div>
+            <div class="hero-badge">🔒 100% Private</div>
             <div class="hero-badge">📱 Works Anywhere</div>
+            <div class="hero-badge">⚡ Instant Results</div>
         </div>
         <a href="calculator.html" class="cta-button">Start Calculating Now →</a>
     </section>
