--- a/calculator.html
+++ b/calculator.html
@@ -897,6 +897,14 @@
                     <p style="margin-top: 10px; color: var(--ramsey-green);">✓ Numbers verified!</p>
                 </div>
 
+                <div style="background: #e8f5e9; border: 2px solid var(--ramsey-green); border-radius: 8px; padding: 20px; margin: 20px 0; text-align: center;" id="verifyBox">
+                    <h4 style="color: var(--ramsey-green); margin-bottom: 10px;">✅ Math Check</h4>
+                    <p style="margin: 5px 0; color: var(--ramsey-gray);">Original Debt: <strong id="vOrig" style="color: var(--ramsey-blue);"></strong></p>
+                    <p style="margin: 5px 0; color: var(--ramsey-gray);">+ Total Interest: <strong id="vInt" style="color: var(--ramsey-blue);"></strong></p>
+                    <p style="margin: 5px 0; color: var(--ramsey-gray);">= Total to Pay: <strong id="vTot" style="color: var(--ramsey-blue);"></strong></p>
+                    <p style="margin-top: 10px; color: var(--ramsey-green); font-weight: bold;">✓ Numbers verified!</p>
+                </div>
+
                 <div class="timeline">
                     <h3>📅 Month-by-Month Breakdown</h3>
                     <p style="color: var(--ramsey-gray); font-size: 0.9rem; margin-bottom: 15px;">
@@ -1135,6 +1143,7 @@
                 document.getElementById('comparisonSection').style.display = 'none';
                 document.getElementById('celebration').classList.remove('show');
                 document.getElementById('countdownSection').classList.remove('show');
+                document.getElementById('verifyBox').style.display = 'none';
                 document.getElementById('verificationBox').style.display = 'none';
                 
                 // Clear breakdown table
@@ -1699,6 +1708,11 @@
             const noExtra = calculatePayoff(JSON.parse(JSON.stringify(originalDebts)), currentMethod, 0);
             const interestSaved = Math.max(0, noExtra.totalInterest - result.totalInterest);
             document.getElementById('interestSaved').textContent = formatMoney(interestSaved);
+            
+            // Populate verification box
+            document.getElementById('vOrig').textContent = formatMoney(totalDebt);
+            document.getElementById('vInt').textContent = formatMoney(result.totalInterest);
+            document.getElementById('vTot').textContent = formatMoney(totalDebt + result.totalInterest);
 
             // Enhanced Monthly Breakdown with running totals
             const tbody = document.getElementById('breakdownBody');
